--- a/app/templates/components/tomster-tile.hbs
+++ b/app/templates/components/tomster-tile.hbs
@@ -1,5 +1,5 @@
 <div class="col-xs-4">
-  <img width="100%" height="auto" src={{tomster.image}} alt={{tomster.title}} />
+  <img width="400px" height="500px" src={{tomster.image}} alt={{tomster.title}} />
   <h3>{{tomster.title}}</h3>
   <p>
     {{tomster.description}}
