--- a/app/templates/tomster.hbs
+++ b/app/templates/tomster.hbs
@@ -1,6 +1,7 @@
 <div class="container row">
   {{tomster-tile tomster=model}}
   {{new-comment tomster=model addComment="addComment"}}
+  <h3>Comments:</h3>
   <hr>
   <ul>
   {{#each model.comments as |comment|}}
